--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,18 +20,20 @@ header, section, aside, footer {
 
 .content {
   background: #0086C1;
+  margin-right: 1rem;
   flex: 1;
+  color: #ffffff;
 }
 
 .sidebar {
   background: #0086C1;
   margin-right: 1rem;
   flex: 0 1 300px;
+  color: #ffffff;
 }
 
 header {
   margin: 0.5rem 0 0.5rem 0;
-  text-align: center;
 }
 
 header h1 {
@@ -44,14 +46,17 @@ header h2 {
   margin: 0;
 }
 
-footer {
-  padding-top: 2em;
-  text-align: center;
-  font-size: 0.7em;
+header h3 {
+  color: rgb(1, 75, 107);
+  margin: 0;
 }
 
-header button {
+header .buttonBar {
   float: right;
-  width: 100px;
-  background: black;
+  margin: 0 0.5em 0 0.5em;
+}
+
+footer {
+  padding-top: 2em;
+  font-size: 0.7em;
 }
